--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.5.5",
-    "core-js": "^3.2.1"
+    "axios": "^0.21.1",
+    "core-js": "^3.2.1",
+    "json-server": "^0.16.3"
   },
   "devDependencies": {
     "@babel/core": "^7.5.0",
