--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.5.5",
+    "@material-ui/core": "^4.11.3",
     "axios": "^0.21.1",
     "core-js": "^3.2.1",
-    "json-server": "^0.16.3"
+    "json-server": "^0.16.3",
+    "react-hook-form": "^7.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.0",
