--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.6.0",
     "prettier": "^1.18.2",
+    "raw.macro": "^0.4.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.12.11",
