--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "axios": "^0.21.1",
     "core-js": "^3.2.1",
     "json-server": "^0.16.3",
-    "react-hook-form": "^7.1.1"
+    "react-hook-form": "^7.1.1",
+    "react-timekeeper": "^2.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.5.0",
