--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@babel/runtime": "^7.5.5",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "amazon-cognito-identity-js": "^5.0.1",
     "axios": "^0.21.1",
     "core-js": "^3.2.1",
     "json-server": "^0.16.3",
